# mtl-ml-sgs-ieee-wcci-ijcnn2026

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default.yaml
docs/: architecture.md  conf.py  data_format.md  index.rst  installation.md  quickstart.md  training_guide.md
docs/api/: data.rst  evaluation.rst  inference.rst  models.rst  training.rst
notebooks/: quickstart.ipynb
scripts/: __init__.py  compare_models.py
src/ml_sgs/: __init__.py
src/ml_sgs/data/: __init__.py  enhanced_processor.py  processor.py
src/ml_sgs/evaluation/: __init__.py  analysis.py  metrics.py  plotting.py  storage.py
src/ml_sgs/inference/: __init__.py  constrained.py  engine.py  q1q4_engine.py
src/ml_sgs/models/: __init__.py
src/ml_sgs/training/: __init__.py  train_q1_models.py  train_q2_models.py  train_q3_models.py  train_q4_models.py
tests/: conftest.py  test_data.py  test_inference.py  test_metrics.py  test_models.py
